Got into the laptop gui.

--- a/src/main/resources/assets/cdm/lang/en_us.json
+++ b/src/main/resources/assets/cdm/lang/en_us.json
@@ -1,59 +1,119 @@
 {
-  "itemGroup.cdm_tab_device": "MrCrayfish's Device Mod",
-  "block.cdm.laptop.name": "Laptop",
-  "block.cdm.router.name": "Router",
-  "block.cdm.printer.name": "Printer",
-  "block.cdm.paper.name": "Paper",
-  "block.cdm.office_chair.name": "Office Chair",
-  "item.cdm.flash_drive.name": "Flash Drive",
-  "item.cdm.printed_paper.name": "Printed Paper",
-  "item.cdm.ethernet_cable.name": "Ethernet Cable",
-  "item.cdm.circuit_board.name": "Circuit Board",
-  "item.cdm.motherboard.name": "Motherboard",
-  "item.cdm.cpu.name": "Central Processing Unit",
-  "item.cdm.hard_drive.name": "Hard Disk Drive",
-  "item.cdm.flash_chip.name": "Flash Chip",
-  "item.cdm.solid_state_drive.name": "Solid State Drive",
-  "item.cdm.ram.name": "Random Access Memory",
-  "item.cdm.gpu.name": "Graphics Processing Unit",
-  "item.cdm.wifi.name": "WiFi Module",
-  "item.cdm.battery.name": "Battery",
-  "item.cdm.screen.name": "Screen",
-  "item.cdm.controller_unit.name": "Controller Unit",
-  "item.cdm.small_electric_motor.name": "Small Electric Motor",
-  "item.cdm.carriage.name": "Carriage",
-  "item.cdm.plastic_unrefined.name": "Unrefined Plastic",
-  "item.cdm.plastic.name": "Plastic",
-  "item.cdm.plastic_frame.name": "Plastic Frame",
-  "item.cdm.wheel.name": "Wheel",
-  "app.cdm.settings.name": "Settings",
-  "app.cdm.settings.Author": "MrCrayfish",
-  "app.cdm.app_store.name": "Application Market",
-  "app.cdm.app_store.desc": "null",
-  "app.cdm.app_store.Author": "MrCrayfish",
-  "app.cdm.bank.name": "Bank",
-  "app.cdm.bank.desc": "The official bank application for the Device Mod. Allow you to convert emeralds into digital currency.",
-  "app.cdm.bank.author": "MrCrayfish",
-  "app.cdm.example.name": "UI Components",
-  "app.cdm.example.author": "MrCrayfish",
-  "app.cdm.file_browser.name": "File Browser",
-  "app.cdm.file_browser.author": "MrCrayfish",
-  "app.cdm.note_stash.name": "Note Stash",
-  "app.cdm.note_stash.desc": "The official note application for the Device Mod. Allows you to store simple notes.",
-  "app.cdm.note_stash.author": "MrCrayfish",
-  "app.cdm.pixel_painter.name": "Pixel Painter",
-  "app.cdm.pixel_painter.author": "MrCrayfish",
-  "app.cdm.ender_mail.name": "EnderMail",
-  "app.cdm.ender_mail.desc": "The official email application for the Device Mod. Allows you to send emails to other players on the server.",
-  "app.cdm.ender_mail.author": "MrCrayfish",
-  "app.cdm.boat_racers.name": "Boat Racers",
-  "app.cdm.boat_racers.author": "MrCrayfish",
-  "app.cdm.mine_bay.name": "MineBay",
-  "app.cdm.mine_bay.author": "MrCrayfish",
-  "message.cdm.select_router": "Now select a router to connect this device to.",
-  "message.cdm.invalid_cable": "Please select a device first before adding it to this router.",
-  "message.cdm.router_max_devices": "The maximum amount of devices has been reached for this router.",
-  "message.cdm.device_already_connected": "The selected device is already connected to this router.",
-  "message.cdm.successful_connection": "Successfully connected the selected device to this router.",
-  "message.cdm.successful_registered": "Successfully registered the selected device to this router."
+    "itemGroup.cdm_tab_device": "MrCrayfish's Device Mod",
+    "block.cdm.white_laptop": "White Laptop",
+    "block.cdm.orange_laptop": "Orange Laptop",
+    "block.cdm.magenta_laptop": "Magenta Laptop",
+    "block.cdm.light_blue_laptop": "Light Blue Laptop",
+    "block.cdm.yellow_laptop": "Yellow Laptop",
+    "block.cdm.lime_laptop": "Lime Laptop",
+    "block.cdm.pink_laptop": "Pink Laptop",
+    "block.cdm.gray_laptop": "Gray Laptop",
+    "block.cdm.light_gray_laptop": "Light Gray Laptop",
+    "block.cdm.cyan_laptop": "Cyan Laptop",
+    "block.cdm.purple_laptop": "Purple Laptop",
+    "block.cdm.blue_laptop": "Blue Laptop",
+    "block.cdm.brown_laptop": "Brown Laptop",
+    "block.cdm.green_laptop": "Green Laptop",
+    "block.cdm.red_laptop": "Red Laptop",
+    "block.cdm.black_laptop": "Black Laptop",
+    "block.cdm.white_router": "White Router",
+    "block.cdm.orange_router": "Orange Router",
+    "block.cdm.magenta_router": "Magenta Router",
+    "block.cdm.light_blue_router": "Light Blue Router",
+    "block.cdm.yellow_router": "Yellow Router",
+    "block.cdm.lime_router": "Lime Router",
+    "block.cdm.pink_router": "Pink Router",
+    "block.cdm.gray_router": "Gray Router",
+    "block.cdm.light_gray_router": "Light Gray Router",
+    "block.cdm.cyan_router": "Cyan Router",
+    "block.cdm.purple_router": "Purple Router",
+    "block.cdm.blue_router": "Blue Router",
+    "block.cdm.brown_router": "Brown Router",
+    "block.cdm.green_router": "Green Router",
+    "block.cdm.red_router": "Red Router",
+    "block.cdm.black_router": "Black Router",
+    "block.cdm.white_printer": "White Printer",
+    "block.cdm.orange_printer": "Orange Printer",
+    "block.cdm.magenta_printer": "Magenta Printer",
+    "block.cdm.light_blue_printer": "Light Blue Printer",
+    "block.cdm.yellow_printer": "Yellow Printer",
+    "block.cdm.lime_printer": "Lime Printer",
+    "block.cdm.pink_printer": "Pink Printer",
+    "block.cdm.gray_printer": "Gray Printer",
+    "block.cdm.light_gray_printer": "Light Gray Printer",
+    "block.cdm.cyan_printer": "Cyan Printer",
+    "block.cdm.purple_printer": "Purple Printer",
+    "block.cdm.blue_printer": "Blue Printer",
+    "block.cdm.brown_printer": "Brown Printer",
+    "block.cdm.green_printer": "Green Printer",
+    "block.cdm.red_printer": "Red Printer",
+    "block.cdm.black_printer": "Black Printer",
+    "block.cdm.paper": "Paper",
+    "block.cdm.office_chair": "Office Chair",
+    "item.cdm.white_flash_drive": "White Flash Drive",
+    "item.cdm.orange_flash_drive": "Orange Flash Drive",
+    "item.cdm.magenta_flash_drive": "Magenta Flash Drive",
+    "item.cdm.light_blue_flash_drive": "Light Blue Flash Drive",
+    "item.cdm.yellow_flash_drive": "Yellow Flash Drive",
+    "item.cdm.lime_flash_drive": "Lime Flash Drive",
+    "item.cdm.pink_flash_drive": "Pink Flash Drive",
+    "item.cdm.gray_flash_drive": "Gray Flash Drive",
+    "item.cdm.light_gray_flash_drive": "Light Gray Flash Drive",
+    "item.cdm.cyan_flash_drive": "Cyan Flash Drive",
+    "item.cdm.purple_flash_drive": "Purple Flash Drive",
+    "item.cdm.blue_flash_drive": "Blue Flash Drive",
+    "item.cdm.brown_flash_drive": "Brown Flash Drive",
+    "item.cdm.green_flash_drive": "Green Flash Drive",
+    "item.cdm.red_flash_drive": "Red Flash Drive",
+    "item.cdm.black_flash_drive": "Black Flash Drive",
+    "item.cdm.printed_paper": "Printed Paper",
+    "item.cdm.ethernet_cable": "Ethernet Cable",
+    "item.cdm.circuit_board": "Circuit Board",
+    "item.cdm.motherboard": "Motherboard",
+    "item.cdm.cpu": "Central Processing Unit",
+    "item.cdm.hard_drive": "Hard Disk Drive",
+    "item.cdm.flash_chip": "Flash Chip",
+    "item.cdm.solid_state_drive": "Solid State Drive",
+    "item.cdm.ram": "Random Access Memory",
+    "item.cdm.gpu": "Graphics Processing Unit",
+    "item.cdm.wifi": "WiFi Module",
+    "item.cdm.battery": "Battery",
+    "item.cdm.screen": "Screen",
+    "item.cdm.controller_unit": "Controller Unit",
+    "item.cdm.small_electric_motor": "Small Electric Motor",
+    "item.cdm.carriage": "Carriage",
+    "item.cdm.plastic_unrefined": "Unrefined Plastic",
+    "item.cdm.plastic": "Plastic",
+    "item.cdm.plastic_frame": "Plastic Frame",
+    "item.cdm.wheel": "Wheel",
+    "app.cdm.settings": "Settings",
+    "app.cdm.settings.author": "MrCrayfish",
+    "app.cdm.app_store": "Application Market",
+    "app.cdm.app_store.desc": "null",
+    "app.cdm.app_store.author": "MrCrayfish",
+    "app.cdm.bank": "Bank",
+    "app.cdm.bank.desc": "The official bank application for the Device Mod. Allow you to convert emeralds into digital currency.",
+    "app.cdm.bank.author": "MrCrayfish",
+    "app.cdm.example": "UI Components",
+    "app.cdm.example.author": "MrCrayfish",
+    "app.cdm.file_browser": "File Browser",
+    "app.cdm.file_browser.author": "MrCrayfish",
+    "app.cdm.note_stash": "Note Stash",
+    "app.cdm.note_stash.desc": "The official note application for the Device Mod. Allows you to store simple notes.",
+    "app.cdm.note_stash.author": "MrCrayfish",
+    "app.cdm.pixel_painter": "Pixel Painter",
+    "app.cdm.pixel_painter.author": "MrCrayfish",
+    "app.cdm.ender_mail": "EnderMail",
+    "app.cdm.ender_mail.desc": "The official email application for the Device Mod. Allows you to send emails to other players on the server.",
+    "app.cdm.ender_mail.author": "MrCrayfish",
+    "app.cdm.boat_racers": "Boat Racers",
+    "app.cdm.boat_racers.author": "MrCrayfish",
+    "app.cdm.mine_bay": "MineBay",
+    "app.cdm.mine_bay.author": "MrCrayfish",
+    "message.cdm.select_router": "Now select a router to connect this device to.",
+    "message.cdm.invalid_cable": "Please select a device first before adding it to this router.",
+    "message.cdm.router_max_devices": "The maximum amount of devices has been reached for this router.",
+    "message.cdm.device_already_connected": "The selected device is already connected to this router.",
+    "message.cdm.successful_connection": "Successfully connected the selected device to this router.",
+    "message.cdm.successful_registered": "Successfully registered the selected device to this router."
 }
