guhr h6h htry5te5b hhh hynhr fh;,/; fghjh dhrdth~!@ dgbb. fsevbdsbfd456765765y rtherhn6u6767fgn bSGFYWRCB jtrhfgntyvc. vhygtfhDV#%#^#^

--- a/common/src/main/resources/assets/devices/lang/en_us.json
+++ b/common/src/main/resources/assets/devices/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-    "itemGroup.devices_tab_device": "Devices Mod",
+    "itemGroup.devices.devices_tab_device": "Devices Mod",
     "block.devices.white_laptop": "White Laptop",
     "block.devices.orange_laptop": "Orange Laptop",
     "block.devices.magenta_laptop": "Magenta Laptop",
