--- a/common/src/main/resources/assets/devices/lang/en_us.json
+++ b/common/src/main/resources/assets/devices/lang/en_us.json
@@ -49,7 +49,22 @@
     "block.devices.red_printer": "Red Printer",
     "block.devices.black_printer": "Black Printer",
     "block.devices.paper": "Paper",
-    "block.devices.office_chair": "Office Chair",
+    "block.devices.white_office_chair": "White Office Chair",
+    "block.devices.orange_office_chair": "Orange Office Chair",
+    "block.devices.magenta_office_chair": "Magenta Office Chair",
+    "block.devices.light_blue_office_chair": "Light Blue Office Chair",
+    "block.devices.yellow_office_chair": "Yellow Office Chair",
+    "block.devices.lime_office_chair": "Lime Office Chair",
+    "block.devices.pink_office_chair": "Pink Office Chair",
+    "block.devices.gray_office_chair": "Gray Office Chair",
+    "block.devices.light_gray_office_chair": "Light Gray Office Chair",
+    "block.devices.cyan_office_chair": "Cyan Office Chair",
+    "block.devices.purple_office_chair": "Purple Office Chair",
+    "block.devices.blue_office_chair": "Blue Office Chair",
+    "block.devices.brown_office_chair": "Brown Office Chair",
+    "block.devices.green_office_chair": "Green Office Chair",
+    "block.devices.red_office_chair": "Red Office Chair",
+    "block.devices.black_office_chair": "Black Office Chair",
     "item.devices.white_flash_drive": "White Flash Drive",
     "item.devices.orange_flash_drive": "Orange Flash Drive",
     "item.devices.magenta_flash_drive": "Magenta Flash Drive",
