--- a/common/src/main/resources/assets/devices/lang/en_us.json
+++ b/common/src/main/resources/assets/devices/lang/en_us.json
@@ -16,8 +16,8 @@
     "block.devices.green_laptop": "Green Laptop",
     "block.devices.red_laptop": "Red Laptop",
     "block.devices.black_laptop": "Black Laptop",
-    "block.devices.mac_max_x": "Mac Max X+!",
-    "block.devices.mac_max_x_emoji": "Mac Max X+!:middle_finger:",
+    "block.devices.mac_max_x": "Macaroni Max X Pro 5G White Ultra Ex 3+!$",
+    "block.devices.mac_max_x_emoji": "Macaroni Max X Pro 5G White Ultra Ex 3+!:thinking:",
     "block.devices.white_router": "White Router",
     "block.devices.orange_router": "Orange Router",
     "block.devices.magenta_router": "Magenta Router",
