--- a/fabric/src/main/resources/translations/en_pt.json
+++ b/fabric/src/main/resources/translations/en_pt.json
@@ -2,13 +2,13 @@
   "laptop": "Concr't Rec'angl'",
   "laptop_block": "%1$s o' %2$s",
 
-  "printer": "Spewer",
+  "printer": "Spew'r",
   "printer_block": "%1$s o' %2$s",
 
   "flash_drive": "Blunt Dart",
   "flash_drive_item": "%1$s o' %2$s",
 
-  "router": "'adio",
+  "router": "Radi'o",
   "router_block": "%1$s o' %2$s",
 
   "office_chair": "Chair o' Desk",
