--- a/fabric/src/main/resources/translations/lol.json
+++ b/fabric/src/main/resources/translations/lol.json
@@ -1,14 +1,14 @@
 {
-  "laptop": "beNchw ARMOR",
+  "laptop": "SLIM HiiTA",
   "laptop_block": "%2$s %1$s",
 
-  "printer": "PAPER MACHE",
+  "printer": "papier beleug",
   "printer_block": "%2$s %1$s",
 
   "flash_drive": "Short Sticc",
   "flash_drive_item": "%2$s %1$s",
 
-  "router": "BOX WTH TWIGS",
+  "router": "BOX WTH TWO TWIGGYS",
   "router_block": "%2$s %1$s",
 
   "office_chair": "Spinny thing",
